--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "test": "cross-env NODE_ENV=test SECRET_KEY=secret_key jest --verbose --runInBand",
     "build": "tsc",
-    "start": "node dist/src/server.js"
+    "start": "node dist/server.js"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
