--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "@types/jest": "^29.2.5",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/supertest": "^2.0.12",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jest": "^29.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0",
+    "jsonwebtoken": "8.5.1",
+    "pg": "8.8.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
