--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
-    "typeorm": "^0.3.6",
+    "typeorm": "0.3.11",
     "yup": "^0.32.11"
   }
 }
